GNOME Bugzilla – Bug 654003
[PATCH] video-texture: Add missing transfer annotations
Last modified: 2011-07-05 15:26:39 UTC
Created attachment 191313 [details] [review] video-texture: Add missing transfer annotations Add missing transfer annotations to allow get_pipeline() and get_idle_material() being used through gobject-introspection
Review of attachment 191313 [details] [review]: looks good.
Thanks, pushed to master.