video-texture: Add missing transfer annotations

Add missing transfer annotations to allow get_pipeline() and
get_idle_material() being used through gobject-introspection

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=654003